--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "lucide-react": "^0.395.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
+    "react-router-dom": "^7.7.1",
     "recharts": "^2.12.7"
   },
   "devDependencies": {
